--- a/ASPServer/ServerApp/Properties/launchSettings.json
+++ b/ASPServer/ServerApp/Properties/launchSettings.json
@@ -12,8 +12,7 @@
     "ServerApp": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7203;http://localhost:5231",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
