--- a/ASPServer/ServerApp/appsettings.Development.json
+++ b/ASPServer/ServerApp/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MySql": "server=localhost;user=hc_root;password=1q2w3e4r;database=study_haechan;characterset=utf8;sslmode=None;minimumPoolSize=1;maximumpoolsize=40;"
   }
 }
