--- a/ASPServer/ServerApp/appsettings.json
+++ b/ASPServer/ServerApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySql": "server=localhost;user=hc_root;password=1q2w3e4r;database=study_haechan;characterset=utf8;sslmode=None;minimumPoolSize=1;maximumpoolsize=40;"
+  }
 }
