--- a/ASPServer/ServerApp/appsettings.Development.json
+++ b/ASPServer/ServerApp/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MySql": "server=localhost;user=hc_root;password=1q2w3e4r;database=study_haechan;characterset=utf8;sslmode=None;minimumPoolSize=1;maximumpoolsize=40;"
+    "MySql": "server=localhost;user=hc_root;password=1q2w3e4r;database=study_haechan;characterset=utf8;sslmode=None;minimumPoolSize=1;maximumpoolsize=40;",
+    "Redis": "localhost:6379"
   }
 }
