--- a/ASPServer/ServerApp/ServerApp.csproj
+++ b/ASPServer/ServerApp/ServerApp.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
         <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.10" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="StackExchange.Redis" Version="2.6.90" />
     </ItemGroup>
 
     <ItemGroup>
