--- a/ASPServer/ServerApp/ServerApp.csproj
+++ b/ASPServer/ServerApp/ServerApp.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="log4net" Version="2.0.15" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.13">
           <PrivateAssets>all</PrivateAssets>
@@ -14,6 +15,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.13" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="6.1.0" />
         <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.10" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="StackExchange.Redis" Version="2.6.90" />
